--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/Home/home.html"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/Home/home.html" }
   ]
 }
