--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/Home/home.html" }
+    { "source": "/(.*)", "destination": "./home.html" }
   ]
 }
